--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -59,6 +59,13 @@ a {
   background-color: #00b3db;
   border-color: #285e8e; /*set the color you want here*/
 }
+.button{
+  border-radius: 0%;
+  border: none;
+  background: none;
+}
+
+
 
 
 
